--- a/src/main/resources/templates/formCategory.html
+++ b/src/main/resources/templates/formCategory.html
@@ -45,7 +45,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="/">
                         Reto 4
                     </a>
                     <li class="nav-item">
