Corrección en calificaciones

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,10 +34,12 @@
             <div class="hold-transition login-page">
                 <div class="login-box">
                     <div class="login-logo">
-                        <a href="#" class="text-center"><b>Bienvenido</b> <span id="user"></span></a>
+                        <a href="#" class="text-center"><b>Bienvenido</b></a>
                     </div>
                     <div class="login-logo">
                         <img id="avatar" height="100" alt="avatar">
+                        <br>
+                        <span id="user" class="text-center"></span>
                     </div>
                     <div class="card">
                         <h5 class="card-header text-center">Haga click sobre aquella entidad que desee visualizar</h5>
