--- a/src/main/resources/templates/updateRatingForm.html
+++ b/src/main/resources/templates/updateRatingForm.html
@@ -81,6 +81,7 @@
                             </ul>
                         </div>
                         <input type="hidden" th:field="*{id}" />
+                        <input type="hidden" th:field="*{reservation}" />
                         <div class="form-group row">
                             <label class="col-lg-3 col-form-label form-control-label">Mensaje</label>
                             <div class="col-lg-9">
