--- a/src/main/resources/templates/formRatingReservation.html
+++ b/src/main/resources/templates/formRatingReservation.html
@@ -28,7 +28,7 @@
         <!-- Nuestro css-->
         <link rel="stylesheet" type="text/css" href="static/css/user-form.css"
               th:href="@{/css/user-form.css}">        
-        
+
         <script type="text/javascript">
             $(document).ready(function () {
                 //Asegurate que el id que le diste a la tabla sea igual al texto despues del simbolo #
@@ -141,20 +141,20 @@
                             <div class="card-header">
                                 <h4>Nueva Calificación</h4>
                             </div>
-                            <div class="card-body">
+                            <div class="card-body" th:if="${reservaciones != null and !reservaciones.empty}">
                                 <form th:object="${rating}" th:action="@{/formRatingReservation/save}" class="form" method="post">      
                                     <!-- Log de erorres de validacion-->
                                     <div th:object="${rating}" th:if="${#fields.hasErrors('*')}" class="errorblock">
-                                      <ul
-                                        class="alert alert-danger"
-                                        role="alert"
-                                      >
-                                        <li
-                                          th:each="error: ${#fields.errors('*')}"
-                                          th:text="${error}"
-                                          style="margin-left: 20px"
-                                        ></li>
-                                      </ul>
+                                        <ul
+                                            class="alert alert-danger"
+                                            role="alert"
+                                            >
+                                            <li
+                                                th:each="error: ${#fields.errors('*')}"
+                                                th:text="${error}"
+                                                style="margin-left: 20px"
+                                                ></li>
+                                        </ul>
                                         <script>
                                             $('#form-tab').tab('show');
                                         </script>
@@ -165,7 +165,6 @@
                                             <select id="reservation" name="reservation" class="form-control">
                                                 <option th:each="r: ${reservaciones}" 
                                                         th:value="${r.idReservation}" 
-                                                        th:if="${r.score == null or r.score.rate == null}" 
                                                         th:text="'Reservación a nombre de ' + ${r.client.name} + ' entre las fechas ' + ${#strings.substring(r.startDate,0,10)} + ' y ' + ${#strings.substring(r.devolutionDate,0,10)}">
                                                 </option>
                                             </select>
@@ -181,7 +180,7 @@
                                                 placeholder="¿Cómo fue su experiencia en la reservación? Cuentenos."
                                                 class="form-control"
                                                 rows="5"
-                                              ></textarea>
+                                                ></textarea>
                                         </div>
                                     </div>
                                     <div class="form-group row">
@@ -195,7 +194,7 @@
                                                 oninput="document.getElementById('txt-rate').value=value"
                                                 min="1"
                                                 max="5"
-                                              />
+                                                />
                                             <output id="txt-rate" name="txt-rate">1</output>
                                         </div>
                                     </div>
@@ -210,6 +209,11 @@
                                         </div>
                                     </div>
                                 </form>
+                            </div>
+                            <div class="card-body" th:if="${reservaciones == null or reservaciones.empty}">
+                                <div class="alert alert-danger" role="alert">
+                                    No hay reservaciones pendientes por calificar
+                                </div>
                             </div>
                         </div>
                     </div>
