--- a/src/main/resources/templates/formClient.html
+++ b/src/main/resources/templates/formClient.html
@@ -124,7 +124,7 @@
                                         </tbody>
                                         <tbody th:if="${clients == null or clients.empty}">
                                             <tr>
-                                                <td colspan="4">
+                                                <td colspan="5">
                                                     <div class="alert alert-danger" role="alert">
                                                         No hay Clientes que mostrar
                                                     </div>
@@ -171,6 +171,17 @@
                                         <div class="col-lg-9">
                                             <input th:field="*{age}" id="age_client"  type="number"
                                                    class="form-control" min="1" max="100" required />
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-lg-3 col-form-label form-control-label">Contraseña</label>
+                                        <div class="col-lg-9">
+                                            <input
+                                                th:field="*{password}"
+                                                placeholder="Escribe la contraseña"
+                                                type="password"
+                                                class="form-control"
+                                                />
                                         </div>
                                     </div>
                                     <div class="form-group row">
