--- a/src/main/resources/templates/formMsg.html
+++ b/src/main/resources/templates/formMsg.html
@@ -143,7 +143,7 @@
                             <div class="card-header">
                                 <h4>Nuevo Mensaje</h4>
                             </div>
-                            <div class="card-body">
+                            <div class="card-body" th:if="${(clients != null and !clients.empty) and (cabins != null and !cabins.empty) }">
                                 <form th:object="${message}" th:action="@{/formMsg/save}" class="form" method="post">
                                     <!-- Log de erorres de validacion-->
                                     <div th:object="${message}" th:if="${#fields.hasErrors('*')}" class="errorblock">
@@ -208,6 +208,16 @@
                                         </div>
                                     </div>
                                 </form>
+                            </div>
+                            <div class="card-body" th:if="${clients == null or clients.empty}">
+                                <div class="alert alert-danger" role="alert">
+                                    No hay clientes para asignar el mensaje
+                                </div>
+                            </div>
+                            <div class="card-body" th:if="${cabins == null or cabins.empty}">
+                                <div class="alert alert-danger" role="alert">
+                                    No hay cabañas para asignar el mensaje
+                                </div>
                             </div>
                         </div>
                     </div>
